# stock-market-predictions

./: .conda_config  LICENSE  MSFT-5-Year-LSTM.h5  README.md  pyproject.toml
data/: mass_market.py  stock_retrieval.py
data/Apple/: Apple.csv  Apple_5-Year.csv
data/MSFT/: MSFT-5-Year-Forecast.csv  MSFT-5-Year.csv  MSFT.csv
data/PTON/: PTON.csv
data/RBLX/: RBLX.csv
data/Roblox/: RBLX.csv
data/S&P/1-Year/: S&P500.csv  S&P500.xlsx
data/S&P/5-Year/: S&P500.csv  S&P500_5-Year.csv
data/WFC/: WFC.csv
data/XOM/: XOM.csv
logs/MSFT/: keras_metadata.pb  saved_model.pb
logs/MSFT-5-Year/: keras_metadata.pb  saved_model.pb
logs/MSFT-5-Year-GRU/: keras_metadata.pb  saved_model.pb
logs/MSFT-5-Year-GRU/variables/: variables.data-00000-of-00001  variables.index
logs/MSFT-5-Year/variables/: variables.data-00000-of-00001  variables.index
logs/MSFT-TFT-Noncovariant/: model.pth.tar
logs/MSFT-TFT-Noncovariant/MSFT-Noncovariant/: _model.pth.tar
logs/MSFT/variables/: variables.data-00000-of-00001  variables.index
logs/PTON-DeepTCN-Noncovariant/: model.pth.tar
logs/PTON-DeepTCN-Noncovariant/PTON-DeepTCN/: _model.pth.tar
logs/RBLX-DeepTCN-Noncovariant/: model.pth.tar
logs/RBLX-TFT-Covariant/: RBLX.pth.tar
logs/archive/MSFT-5-Year-DeepTCN-Noncovariant/: model.pth.tar
logs/archive/MSFT-DeepTCN-Noncovariant/: model.pth.tar
logs/archive/RBLX-TFT-Noncovariant/: RBLX.pth.tar
outputs/: Apple_5-Year.txt  S&P500_1-Year.txt  S&P500_5-Year.txt
stock_market_predictions/: N-BEATS-Noncovariate.ipynb
stock_market_predictions/Computation/: Apple_5-Year.ipynb  S&P500_1-Year.ipynb  S&P500_5-Year.ipynb
stock_market_predictions/forecasting/: MSFT-5-Year-LSTM.ipynb  MSFT-LSTM.ipynb  MSFT-TFT-NonPastCovariate.ipynb  N-BEATS-Noncovariate.ipynb  TFT-NonPastCovariate.ipynb  adam.py
stock_market_predictions/forecasting/ARIMAX/: MSFT-5-Year.ipynb
stock_market_predictions/forecasting/GRU-5-Year/: MSFT-5-Year-GRU.ipynb
stock_market_predictions/forecasting/LSTM-5-Year/: MSFT-5-Year-LSTM.ipynb
stock_market_predictions/forecasting/LSTM-AllTime/: MSFT-LSTM.ipynb
tests/: test_stock_market_predictions.py
(+50 files in other folders)
