[tool.poetry]
name = "stock-market-predictions"
version = "0.1.0"
description = "Project to estimate stock market predictions"
authors = ["Aditya Mangalampalli <aditya.mangalampalli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
darts = "0.17.1"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
jupyterlab-code-formatter = "^1.4.10"
yfinance = "^0.1.70"
ipympl = "^0.8.7"
tqdm = "^4.62.3"
plotly = "^5.5.0"
openpyxl = "^3.0.9"
pytorch-lightning = "^1.5.10"
tensorflow-macos = "^2.8.0"
tensorflow-metal = "^0.4.0"
pmdarima = "^1.8.5"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
